# rp-engine

./: .env.example  .gitignore  API.md  CHANGELOG.md  CURRENT_STATUS.md  DEVELOPMENT.md  GETTING_STARTED.md  PROJECT_VISION.md  QUICKSTART.md  SUMMARY.md  pyproject.toml  readme.md  run.sh  run_api.sh  setup.sh  test_imports.py  test_sessions.py  verify.sh
.github/workflows/: ci.yml
app/: __init__.py  api.py  config.py  main.py
app/static/: index.html  index.html.bak
docs/: API_AND_WEB_UI.md
engine/: orchestrator.py  prompt_builder.py
memory/: __init__.py  character.py  compressor.py  session.py  store.py  world.py
src/app/: api.py  config.py  debug_run.py  main.py
src/engine/: __init__.py  orchestrator.py  prompt_builder.py
src/llm/: __init__.py  client.py
src/memory/: character.py  compressor.py  session.py  store.py  world.py
test/: __init__.py  test_models.py
tests/: test_models.py
